efk/kibana_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kibana
  namespace: efk
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: efk.prod.test.ru
      http:
        paths:
        - backend:
            serviceName: kibana
            servicePort: 5601
